--- a/admin/src/app/components/footer/footer.component.html
+++ b/admin/src/app/components/footer/footer.component.html
@@ -1,27 +1,40 @@
-<!-- <footer class="footer">
-  <div class="container-fluid d-flex justify-content-between">
-    <nav class="pull-left">
-      <ul class="nav">
-        <li class="nav-item">
-          <a class="nav-link" href="http://www.themekita.com">
-            ThemeKita
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"> Help </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"> Licenses </a>
-        </li>
-      </ul>
-    </nav>
-    <div class="copyright">
-      2024, made with <i class="fa fa-heart heart text-danger"></i> by
-      <a href="http://www.themekita.com">ThemeKita</a>
+<!-- <footer class="footerWrapper container-fluid">
+  <div class="container d-flex justify-content-between flex-wrap">
+    <div class="col-md-4">
+      <div class="mt-4 mb-3">
+        <img width="203px" height="57px" src="/assets/img/image.png" alt="Logo" />
+      </div>
+      <p class="pb-1 text-white">Địa chỉ: số 22 đường 29, Phường An Khánh, Thành phố Thủ Đức</p>
+      <p class="pb-1 text-white">Số điện thoại: 0385473364</p>
+      <p class="text-white">Email: themoon&#64;gmail.com</p>
+      <div class="socialIcons mt-4 d-flex gap-4">
+        <a href="#"><i class="bi bi-facebook fs-4"></i></a>
+        <a href="#"><i class="bi bi-instagram fs-4"></i></a>
+        <a href="#"><i class="bi bi-twitter fs-4"></i></a>
+        <a href="#"><i class="bi bi-telegram fs-4"></i></a>
+      </div>
     </div>
-    <div>
-      Distributed by
-      <a target="_blank" href="https://themewagon.com/">ThemeWagon</a>.
+
+    <div class="col-md-4 quick">
+      <h2 class="fs-4 mb-3 text-white">LIÊN KẾT NHANH</h2>
+      <p class="text-white">Giới thiệu</p>
+      <p class="text-white">Chính sách bảo mật</p>
+      <p class="text-white">Điều khoản dịch vụ</p>
+      <p class="text-white">Liên hệ</p>
+    </div>
+
+    <div class="col-md-4 send">
+      <h2 class="fs-4 mb-3 text-white">ĐĂNG KÝ NHẬN TIN</h2>
+      <p class="mb-4 text-white">
+        Hãy nhập địa chỉ email của bạn vào ô dưới đây để có thể nhận được tất cả các tin tức mới nhất của The Moon về
+        các sản phẩm mới, các chương trình khuyến mãi mới. The Moon xin đảm bảo sẽ không gửi mail rác, mail spam tới bạn.
+      </p>
+      <div class="d-flex">
+        <input type="email" placeholder="Nhập email của bạn" class="emailInput border-0 rounded-start-4" />
+        <button class="sendButton border-0 rounded-end-4">
+          <i class="bi bi-send text-black"></i>
+        </button>
+      </div>
     </div>
   </div>
 </footer> -->
