--- a/frontend/src/app/register/dangky.module.css
+++ b/frontend/src/app/register/dangky.module.css
@@ -41,6 +41,7 @@
   margin: 10px 0; /* Khoảng cách giữa các input */
   border-radius: 5px;
   border: 1px solid white;
+  color: #fff;
 }
 
 .continueButton {
