--- a/admin/src/app/components/admin/admin-layout/admin-layout.component.html
+++ b/admin/src/app/components/admin/admin-layout/admin-layout.component.html
@@ -1,5 +1,5 @@
 <!-- admin-layout.component.html -->
-<app-sidebar></app-sidebar>
+<!-- <app-sidebar></app-sidebar> -->
 
 <div class="main-content">
   <router-outlet></router-outlet>
