--- a/admin/src/app/components/footer/footer.component.html
+++ b/admin/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<!-- <footer class="footerWrapper container-fluid">
+<footer class="footerWrapper container-fluid">
   <div class="container d-flex justify-content-between flex-wrap">
     <div class="col-md-4">
       <div class="mt-4 mb-3">
@@ -37,4 +37,4 @@
       </div>
     </div>
   </div>
-</footer> -->
+</footer>
