--- a/admin/src/app/components/admin/admin-layout/admin-layout.component.css
+++ b/admin/src/app/components/admin/admin-layout/admin-layout.component.css
@@ -1,4 +1,5 @@
 .main-content {
-  margin-left: 250px; /* chiều rộng sidebar của bạn */
+  margin-left: 250px; /* chiều rộng sidebar */
   padding: 20px;
 }
+
