--- a/admin/src/app/components/home/home.component.html
+++ b/admin/src/app/components/home/home.component.html
@@ -124,8 +124,8 @@
             <!-- <span class="caret"></span> -->
           </a>
         </li>
-        <li class="nav-item">
-          <a data-bs-toggle="collapse" href="#submenu">
+      <li class="nav-item">
+           <a (click)="logout()" style="cursor: pointer;">
             <i class="fas fa-bars"></i>
             <p>Đăng xuất</p>
             <!-- <span class="caret"></span> -->
