--- a/admin/src/app/components/login/login.component.html
+++ b/admin/src/app/components/login/login.component.html
@@ -42,8 +42,7 @@
       </div>
     </form>
 
-    <!-- Register form -->
-    <form [formGroup]="registerF" (ngSubmit)="onRegister()">
+    <!-- <form [formGroup]="registerF" (ngSubmit)="onRegister()">
       <div class="form-container register">
         <h2>Tạo tài khoản</h2>
         <div class="form-group">
@@ -130,7 +129,7 @@
         </div>
         <button type="submit" class="btn">Tạo tài khoản</button>
       </div>
-    </form>
+    </form> -->
 
     <!-- Panel chuyển đổi -->
     <div class="panel-container" id="panelContainer">
