--- a/admin/src/app/components/sidebar/sidebar.component.html
+++ b/admin/src/app/components/sidebar/sidebar.component.html
@@ -122,7 +122,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a data-bs-toggle="collapse" href="#submenu">
+           <a (click)="logout()" style="cursor: pointer;">
             <i class="fas fa-bars"></i>
             <p>Đăng xuất</p>
             <!-- <span class="caret"></span> -->
