--- a/admin/src/app/components/footer/footer.component.html
+++ b/admin/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footerWrapper container-fluid">
+<!-- <footer class="footerWrapper container-fluid">
   <div class="container d-flex justify-content-between flex-wrap">
     <div class="col-md-4">
       <div class="mt-4 mb-3">
@@ -35,6 +35,31 @@
           <i class="bi bi-send text-black"></i>
         </button>
       </div>
+    </div>
+  </div>
+</footer> -->
+<footer class="footer">
+  <div class="container-fluid d-flex justify-content-between">
+    <nav class="pull-left">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link" href="http://www.themekita.com"> ThemeKita </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"> Help </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"> Licenses </a>
+        </li>
+      </ul>
+    </nav>
+    <div class="copyright">
+      2024, made with <i class="fa fa-heart heart text-danger"></i> by
+      <a href="http://www.themekita.com">ThemeKita</a>
+    </div>
+    <div>
+      Distributed by
+      <a target="_blank" href="https://themewagon.com/">ThemeWagon</a>.
     </div>
   </div>
 </footer>
