--- a/admin/src/app/components/admin/admin-layout/admin-layout.component.html
+++ b/admin/src/app/components/admin/admin-layout/admin-layout.component.html
@@ -1,6 +1,7 @@
 <!-- admin-layout.component.html -->
 
-<div class="main-content">
-  <router-outlet></router-outlet>
+<div class="container">
+  <div class="page-inner" style="margin-top: 69px">
+    <router-outlet />
+  </div>
 </div>
-
