--- a/admin/src/app/components/sidebar/sidebar.component.html
+++ b/admin/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,15 @@
 <!-- Sidebar -->
-<div class="sidebar" data-background-color="dark">
+<div class="sidebar" data-background-color="dark2">
   <div class="sidebar-logo">
     <!-- Logo Header -->
     <div class="logo-header" data-background-color="dark">
-      <a [routerLink]="['/home']" class="nav-link">
-        <img src="assets/img/image.png" alt="navbar brand" class="navbar-brand" height="50" />
+      <a [routerLink]="['/home']" class="logo">
+        <img
+          src="assets/img/image.png"
+          alt="navbar brand"
+          class="navbar-brand"
+          height="50"
+        />
       </a>
       <div class="nav-toggle">
         <button class="btn btn-toggle toggle-sidebar">
@@ -24,109 +29,163 @@
     <div class="sidebar-content">
       <ul class="nav nav-secondary">
         <li class="nav-item active">
-          <a [routerLink]="['/home']" data-bs-toggle="collapse" href="#dashboard" class="collapsed" aria-expanded="false">
+          <a [routerLink]="['/home']" class="collapsed" aria-expanded="false">
             <i class="fas fa-home"></i>
             <p>Dashboard</p>
             <!-- <span class="caret"></span> -->
           </a>
-
         </li>
         <li class="nav-section">
           <span class="sidebar-mini-icon">
             <i class="fa fa-ellipsis-h"></i>
           </span>
-          <h4 class="text-section">Components</h4>
+          <h4 class="text-section">Management</h4>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/admin/main-room-class']" class="nav-link">
-            <i class="fas fa-bars"></i>
-            <p>Quản lí LPC</p>
-            <!-- <span class="caret"></span> -->
+          <a data-bs-toggle="collapse" href="#rooms">
+            <i class="fas fa-hotel"></i>
+            <p>Quản lý phòng</p>
+            <span class="caret"></span>
           </a>
+          <div class="collapse" id="rooms">
+            <ul class="nav nav-collapse">
+              <li>
+                <a [routerLink]="['/admin/main-room-class']">
+                  <span class="sub-item">Danh sách loại phòng chính</span>
+                </a>
+              </li>
+              <li>
+                <a [routerLink]="['/admin/room-class']">
+                  <span class="sub-item">Danh sách loại phòng</span>
+                </a>
+              </li>
+              <li>
+                <a [routerLink]="['/admin/room']">
+                  <span class="sub-item">Danh sách phòng</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/admin/room-list']" class="nav-link">
-            <i class="fas fa-layer-group"></i>
-            <p>Quản lí phòng</p>
-            <!-- <span class="caret"></span> -->
+          <a data-bs-toggle="collapse" href="#bookings">
+            <i class="fa-solid fa-calendar-days"></i>
+            <p>Quản lý đặt phòng</p>
+            <span class="caret"></span>
           </a>
-        <li class="nav-item">
-          <a [routerLink]="['/admin/room-class-list']" class="nav-link">
-            <i class="fas fa-th-list"></i>
-            <p>Quản lí loại phòng</p>
-            <!-- <span class="caret"></span> -->
-          </a>
+          <div class="collapse" id="bookings">
+            <ul class="nav nav-collapse">
+              <li>
+                <a [routerLink]="['/admin/main-room-class']">
+                  <span class="sub-item">Danh sách đặt phòng</span>
+                </a>
+              </li>
+              <li>
+                <a [routerLink]="['/admin/room-class']">
+                  <span class="sub-item">Trạng thái đặt phòng</span>
+                </a>
+              </li>
+              <li>
+                <a [routerLink]="['/admin/room']">
+                  <span class="sub-item">Phương thức đặt phòng</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/admin/booking']" class="nav-link">
-            <i class="fas fa-pen-square"></i>
-            <p>Quản lí đặt phòng</p>
-            <!-- <span class="caret"></span> -->
+          <a data-bs-toggle="collapse" href="#contents">
+            <i class="fa-solid fa-envelopes-bulk"></i>
+            <p>Quản lý nội dung trang</p>
+            <span class="caret"></span>
           </a>
+          <div class="collapse" id="contents">
+            <ul class="nav nav-collapse">
+              <li>
+                <a [routerLink]="['/admin/website-content']">
+                  <span class="sub-item">Nội dung trang</span>
+                </a>
+              </li>
+              <li>
+                <a [routerLink]="['/admin/content-type']">
+                  <span class="sub-item">Loại nội dung</span>
+                </a>
+              </li>
+              <li>
+                <a [routerLink]="['/admin/comment']">
+                  <span class="sub-item">Bình luận</span>
+                </a>
+              </li>
+              <li>
+                <a [routerLink]="['/admin/review']">
+                  <span class="sub-item">Đánh giá</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/admin/websitecontent']" class="nav-link">
-            <i class="fas fa-table"></i>
-            <p>Quản lí nội dung web</p>
-            <!-- <span class="caret"></span> -->
+          <a data-bs-toggle="collapse" href="#users">
+            <i class="fa-solid fa-users"></i>
+            <p>Quản lý người dùng</p>
+            <span class="caret"></span>
           </a>
+          <div class="collapse" id="users">
+            <ul class="nav nav-collapse">
+              <li>
+                <a [routerLink]="['/admin/user']">
+                  <span class="sub-item">Danh sách khách hàng</span>
+                </a>
+              </li>
+              <li>
+                <a [routerLink]="['/admin/employee']">
+                  <span class="sub-item">Trạng thái nhân viên</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </li>
         <li class="nav-item">
-           <a [routerLink]="['/admin/employee']" class="nav-link">
-            <i class="fas fa-map-marker-alt"></i>
-            <p>Quản lí nhân viên</p>
-            <!-- <span class="caret"></span> -->
+          <a data-bs-toggle="collapse" href="#features">
+            <i class="fa-solid fa-tags"></i>
+            <p>Dịch vụ & Ưu đãi</p>
+            <span class="caret"></span>
           </a>
+          <div class="collapse" id="features">
+            <ul class="nav nav-collapse">
+              <li>
+                <a [routerLink]="['/admin/service']">
+                  <span class="sub-item">Danh sách dịch vụ</span>
+                </a>
+              </li>
+              <li>
+                <a [routerLink]="['/admin/discount']">
+                  <span class="sub-item">Danh sách khuyến mãi</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </li>
         <li class="nav-item">
-           <a [routerLink]="['/admin/service']" class="nav-link">
-            <i class="far fa-chart-bar"></i>
-            <p>Quản lí dịch vụ</p>
-            <!-- <span class="caret"></span> -->
+          <a data-bs-toggle="collapse" href="#payments">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <p>Quản lý thanh toán</p>
+            <span class="caret"></span>
           </a>
-        </li>
-        <li class="nav-item">
-           <a [routerLink]="['/admin/discount']" class="nav-link">
-            <i class="fas fa-desktop"></i>
-            <p>Quản lí khuyến mãi</p>
-            <!-- <span class="caret"></span> -->
-          </a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/admin/comment']" class="nav-link">
-            <i class="fas fa-table"></i>
-            <p>Quản lí bình luận</p>
-            <!-- <span class="caret"></span> -->
-          </a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/admin/review']" class="nav-link">
-            <i class="fas fa-file"></i>
-            <p>Quản lí đánh giá</p>
-            <!-- <span class="badge badge-secondary"></span> -->
-            <!-- <span class="caret"></span> -->
-          </a>
-        </li>
-        <li class="nav-item">
-          <a data-bs-toggle="collapse" href="#submenu">
-            <i class="fas fa-bars"></i>
-            <p>Quản lí hoá đơn</p>
-            <!-- <span class="caret"></span> -->
-          </a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/admin/user']" class="nav-link">
-            <i class="fas fa-bars"></i>
-            <p>Quản lí khách hàng</p>
-            <!-- <span class="caret"></span> -->
-          </a>
-        </li>
-        <li class="nav-item">
-           <a (click)="logout()" style="cursor: pointer;">
-            <i class="fas fa-bars"></i>
-            <p>Đăng xuất</p>
-            <!-- <span class="caret"></span> -->
-          </a>
+          <div class="collapse" id="payments">
+            <ul class="nav nav-collapse">
+              <li>
+                <a [routerLink]="['/admin/payments']">
+                  <span class="sub-item">Danh sách hoá đơn</span>
+                </a>
+              </li>
+              <li>
+                <a [routerLink]="['/admin/payment-method']">
+                  <span class="sub-item">Phương thức thanh toán</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </li>
       </ul>
     </div>
